--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 node_modules*
-/.pnp
+.pnp
 .pnp.js
 .yarn/install-state.gz
 
@@ -10,11 +10,11 @@ node_modules*
 /coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build
 
 # misc
 .DS_Store
