--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.9'
 
 services:
+  frontend:
+    container_name: frontend
+    image: frontend
+    build:
+      args:
+        NEXT_PUBLIC_BACKEND_URL: ${BACKEND_URL}
+      context: ./frontend
+      dockerfile: frontend.dockerfile
+    ports:
+      - 3000:3000
   backend:
     container_name: backend
     image: backend
