--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18"
   },
   "devDependencies": {
