--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -1,16 +1,22 @@
-server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-    }
+http {
+    server {
+        listen       80;
+        listen  [::]:80;
+        server_name  localhost;
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri /index.html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
     }
 }
