--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -1,22 +1,39 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
-http {
-    server {
-        listen       80;
-        listen  [::]:80;
-        server_name  localhost;
+    root   /usr/share/nginx/html/;
+    index  index.html index.htm;
 
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-            try_files $uri /index.html;
-        }
+    location = / {
+        try_files $uri $uri/ /index.html;
+    }
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
+    location ~* \.(png|jpg|jpeg|gif|ico|svg)$ {
+        try_files $uri =404;
+    }
+
+    location ^~ /_next/static/ {
+        access_log off;
+        expires max;
+        try_files $uri =404;
+    }
+
+  location ^~ /documents/ {
+        try_files $uri =404;
+    }
+
+    location / {
+        return 403;
+    }
+
+    location = /index.html {
+        try_files $uri =404;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
